fix index file placeholders + add credits on dynamic

--- a/dynamic/deaths/index.html
+++ b/dynamic/deaths/index.html
@@ -102,7 +102,7 @@ a:hover, a:active {
         <h1 id="deaths">N/A</h1>
     </div>
 	  <h2><center><a href=https://weareblahs.github.io/covidcases/dynamic> View cases</a></center></h2>
-        <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on : </center> <center id="time">N/A</center> </center><center>Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button><br> Realtime API version <button a onclick=document.location='https://weareblahs.github.io/covidcases/deaths/'>Static version</button></center></p>            </html>
+        <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on: </center> <center id="time">N/A</center> </center><center>Made by weareblahs + samleong123 <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button><br> Realtime API version <button a onclick=document.location='https://weareblahs.github.io/covidcases/deaths/'>Static version</button></center></p>            </html>
 </body>
 
 <script> function getdataandtime() {
