--- a/index_temp.html
+++ b/index_temp.html
@@ -24,6 +24,6 @@
         <h1>No data</h1>
     </div>
 	  <h2><center><a href="https://weareblahs.github.io/covidcases/deaths"> View deaths</a></center></h2>
-        <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on : </center> <center id="time">N/A</center> </center><center>Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button><br> Static version. Updates every hour. <button a onclick=document.location='https://weareblahs.github.io/covidcases/dynamic'>Realtime version</button></center></p>           
+        <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on INSERT_GENERATE_DATE_HERE. Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button> Static version. Updates every hour. <button a onclick=document.location='https://weareblahs.github.io/covidcases/dynamic'>Realtime version</button></center></p>           
  </html>
 </body>
