--- a/deaths/index_temp.html
+++ b/deaths/index_temp.html
@@ -9,6 +9,20 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="language" content="English">
 
+    <!---Facebook tags-->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://weareblahs.github.io/covidcases/deaths">
+    <meta property="og:title" content="How many COVID-19 deaths in Malaysia today?">
+    <meta property="og:description" content="Straightforward page that shows only the COVID-19 deaths.">
+    <meta property="og:image" content="https://weareblahs.github.io/covidcases/socmedimg/deaths.png">
+
+    <!---Twitter tags. Website URL and generate date not shown in image.-->
+    <meta property="twitter:card" content="summary_large_image">
+    meta property="twitter:url" content="https://weareblahs.github.io/covidcases/deaths">
+    <meta property="twitter:title" content="How many COVID-19 deaths in Malaysia today?">
+    <meta property="twitter:description" content="Straightforward page that shows only the COVID-19 deaths.">
+    <meta property="twitter:image" content="https://weareblahs.github.io/covidcases/socmedimg/deaths.png">
+
     <body>
         <title>How many COVID-19 deaths in Malaysia today?</title>
         <link rel="stylesheet" href="../styles/style.css">
@@ -25,7 +39,7 @@
     </div>
 	  <h2><center><a href="https://weareblahs.github.io/covidcases/"> View cases</a></center></h2>
       <h2><center>
-          <a href="https://weareblahs.github.io/covidcasessocmedimg/deaths.png" download="COVID-19_Deaths_DOWNLOAD_DATE.jpg"> Save as image </a>
+          <a href="https://weareblahs.github.io/covidcasessocmedimg/deaths.jpg" download="COVID-19_Deaths_DOWNLOAD_DATE.jpg"> Save as image </a>
         </center></h2>
         <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on INSERT_GENERATE_DATE_HERE. Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button> Static version. Updates every hour. <button a onclick=document.location='https://weareblahs.github.io/covidcases/dynamic/deaths'>Realtime version</button></center></p>           
 </html>
