Fix Twitter property
and about that commit just now: i thought GitHub Desktop was git

--- a/index_temp.html
+++ b/index_temp.html
@@ -18,7 +18,7 @@
 
     <!---Twitter tags. Website URL and generate date not shown in image.-->
     <meta property="twitter:card" content="summary_large_image">
-    meta property="twitter:url" content="https://weareblahs.github.io/covidcases">
+    <meta property="twitter:url" content="https://weareblahs.github.io/covidcases">
     <meta property="twitter:title" content="How many COVID-19 cases in Malaysia today?">
     <meta property="twitter:description" content="Straightforward page that shows only the COVID-19 cases.">
     <meta property="twitter:image" content="https://weareblahs.github.io/covidcases/socmedimg/cases.png">
