Link dynamic version to style.css
(so i can modify the css file easily without involving the original files)

--- a/dynamic/index.html
+++ b/dynamic/index.html
@@ -1,85 +1,7 @@
 <head>
-    <style>.center-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 65%;
-}
+ <link rel="stylesheet" href="../styles/style.css">
 
-.centertextv2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 10%;
-}
-
-body {
-    font-family: Helvetica, Roboto, Sans-Serif
-}
-
-  h1 {
-    font-size: 8em;
-  }
-
-@media screen and (min-width: 800px) {
-	  h1 {
-    font-size: 15em;
-  }
-}
-
-  h2 {
-    font-size: 1.5em;
-    font-weight: normal;
-  }
-
-@media screen and (min-width: 800px) {
-	  h2 {
-    font-size: 2.5em;
-    font-weight: normal;
-  }
-}
-
-h4 {
-  font-family: Helvetica, Roboto, Sans-Serif;
-  font-size: 1.25rem
-}
-
-.darkmode {
-  background-color: black;
-  color: white;
-}
-
-@media (prefers-color-scheme: light) {
-  body {
-      background-color: white;
-      color: black;
-  }
-}
-
-a:link, a:visited {
-  background-color: red;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: red;
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-      background-color: black;
-      color: white;
-  }
-}
-</style>
-
-      <meta name=google-site-verification content=aje3mNkQNU0sxxQUHkuLP7QfDyXvP9KBDGj1BDiA3GA />
+  <meta name=google-site-verification content=aje3mNkQNU0sxxQUHkuLP7QfDyXvP9KBDGj1BDiA3GA />
 	<meta name=viewport content=width=device-width, initial-scale=1.0>
 	<meta name=title content=How many COVID-19 cases in Malaysia today?>
 	<meta name=description content=Straightforward page that shows only the COVID-19 cases.>
