--- a/index_temp.html
+++ b/index_temp.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://weareblahs.github.io/covidcases">
     <meta property="og:title" content="How many COVID-19 cases in Malaysia today?">
     <meta property="og:description" content="Straightforward page that shows only the COVID-19 cases.">
-    <meta property="og:image" content="https://weareblahs.github.io/covidcases/socmedimg/cases.png">
+    <meta property="og:image" content="https://weareblahs.github.io/covidcases/img/cases.png">
 
     <!---Twitter tags. Website URL and generate date not shown in image.-->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://weareblahs.github.io/covidcases">
     <meta property="twitter:title" content="How many COVID-19 cases in Malaysia today?">
     <meta property="twitter:description" content="Straightforward page that shows only the COVID-19 cases.">
-    <meta property="twitter:image" content="https://weareblahs.github.io/covidcases/socmedimg/cases.png">
+    <meta property="twitter:image" content="https://weareblahs.github.io/covidcases/img/cases.png">
 
     <body>
         <title>How many COVID-19 cases in Malaysia today?</title>
@@ -39,7 +39,7 @@
     </div>
 	  <h2><center><a href="https://weareblahs.github.io/covidcases/deaths"> View deaths </a></center></h2>
       <h2><center>
-        <a href="https://weareblahs.github.io/covidcases/socmedimg/cases.jpg" download="COVID-19_Deaths_DOWNLOAD_DATE.jpg"> Save as image </a>
+        <a href="https://weareblahs.github.io/covidcases/img/cases.jpg" download="COVID-19_Deaths_DOWNLOAD_DATE.jpg"> Save as image </a>
       </center></h2>
         <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on INSERT_GENERATE_DATE_HERE. Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button> Static version. Updates every hour. <button a onclick=document.location='https://weareblahs.github.io/covidcases/dynamic'>Realtime version</button></center></p>           
  </html>
