--- a/index_temp.html
+++ b/index_temp.html
@@ -1,27 +1,22 @@
 <head>
 	<!---Meta tags. Includes responsive stuffs and SEO--->
     <meta name="google-site-verification" content="aje3mNkQNU0sxxQUHkuLP7QfDyXvP9KBDGj1BDiA3GA" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="title" content="How many COVID-19 cases in Malaysia today?">
-	<meta name="description" content="Straightforward page that shows only the COVID-19 cases.">
-	<meta name="keywords" content="covid-19 malaysia,covid-19 cases malaysia">
-	<meta name="robots" content="index, follow">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="language" content="English">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="title" content="How many COVID-19 cases in Malaysia today?" />
+	<meta name="description" content="Straightforward page that shows only the COVID-19 cases." />
+	<meta name="keywords" content="covid-19 malaysia,covid-19 cases malaysia"  />
+	<meta name="robots" content="index, follow" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="language" content="English" />
 
-    <!---Facebook tags-->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://weareblahs.github.io/covidcases">
-    <meta property="og:title" content="How many COVID-19 cases in Malaysia today?">
-    <meta property="og:description" content="Straightforward page that shows only the COVID-19 cases.">
-    <meta property="og:image" content="https://weareblahs.github.io/covidcases/img/cases.png">
-
-    <!---Twitter tags. Website URL and generate date not shown in image.-->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://weareblahs.github.io/covidcases">
-    <meta property="twitter:title" content="How many COVID-19 cases in Malaysia today?">
-    <meta property="twitter:description" content="Straightforward page that shows only the COVID-19 cases.">
-    <meta property="twitter:image" content="https://weareblahs.github.io/covidcases/img/cases.png">
+    <!---Social media tags-->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://weareblahs.github.io/covidcases" />
+    <meta property="og:title" content="How many COVID-19 cases in Malaysia today?" />
+    <meta property="og:description" content="Straightforward page that shows only the COVID-19 cases." />
+    <meta property="og:image" content="https://weareblahs.github.io/covidcases/img/cases.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:creator" content="@ThisIsTYX" />
 
     <body>
         <title>How many COVID-19 cases in Malaysia today?</title>
