Add back Twitter tags

--- a/deaths/index_temp.html
+++ b/deaths/index_temp.html
@@ -17,6 +17,13 @@
     <meta property="og:image" content="https://weareblahs.github.io/covidcases/img/deaths.png" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:creator" content="@ThisIsTYX" />
+
+    <!---Separate Social Media tags for Twitter-->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://weareblahs.github.io/covidcases/deaths/">
+    <meta property="twitter:title" content="How many COVID-19 deaths in Malaysia today?">
+    <meta property="twitter:description" content="Straightforward page that shows only the COVID-19 deaths.">
+    <meta property="twitter:image" content="https://weareblahs.github.io/covidcases/img/deaths.jpg">
     
     <!---Favicon stuffs-->
     <link rel="apple-touch-icon" sizes="57x57" href="../icon/apple-icon-57x57.png">
