--- a/dynamic/index.html
+++ b/dynamic/index.html
@@ -1,14 +1,58 @@
-<head>
- <link rel="stylesheet" href="../styles/style.css">
+	<!---Meta tags. Includes responsive stuffs and SEO--->
+    <meta name="google-site-verification" content="aje3mNkQNU0sxxQUHkuLP7QfDyXvP9KBDGj1BDiA3GA" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="title" content="How many COVID-19 cases in Malaysia today?" />
+	<meta name="description" content="Straightforward page that shows only the COVID-19 cases." />
+	<meta name="keywords" content="covid-19 malaysia,covid-19 cases malaysia"  />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="language" content="English" />
 
-  <meta name=google-site-verification content=aje3mNkQNU0sxxQUHkuLP7QfDyXvP9KBDGj1BDiA3GA />
-	<meta name=viewport content=width=device-width, initial-scale=1.0>
-	<meta name=title content=How many COVID-19 cases in Malaysia today?>
-	<meta name=description content=Straightforward page that shows only the COVID-19 cases.>
-	<meta name=keywords content=covid-19 malaysia,covid-19 cases malaysia>
-	<meta name=robots content=index, follow>
-	<meta http-equiv=Content-Type content=text/html; charset=utf-8>
-	<meta name=language content=English>
+    <!---Social media tags for Facebook-->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://weareblahs.github.io/covidcases" />
+    <meta property="og:title" content="How many COVID-19 cases in Malaysia today?" />
+    <meta property="og:description" content="Straightforward page that shows only the COVID-19 cases." />
+    <meta property="og:image" content="https://weareblahs.github.io/covidcases/img/cases.png" />
+    
+    <!---Separate Social Media tags for Twitter-->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://weareblahs.github.io/covidcases/">
+    <meta property="twitter:title" content="How many COVID-19 cases in Malaysia today?">
+    <meta property="twitter:description" content="Straightforward page that shows only the COVID-19 cases.">
+    <meta property="twitter:image" content="https://weareblahs.github.io/covidcases/img/cases.jpg">
+
+    <!--PWA stuffs-->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple=mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="COVID-19 Cases">
+    
+    <!---Favicon stuffs-->
+    <link rel="apple-touch-icon" sizes="57x57" href="../icon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../icon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../icon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../icon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../icon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../icon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../icon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../icon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../icon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../icon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../icon/favicon-16x16.png">
+    <link rel="manifest" href="../icon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../icon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!--Add to home screen-->
+    <link rel="stylesheet" type="text/css" href="../pwa/addtohomescreen.css">
+    <script src="../pwa/addtohomescreen.js"></script>
+    <script>
+        addToHomescreen();
+    </script>
 
     <body>
         <title>How many COVID-19 cases in Malaysia today?</title>
