Add back stylesheet + Merge ATHS with style.css

--- a/dynamic/index.html
+++ b/dynamic/index.html
@@ -1,6 +1,7 @@
-	<!---Meta tags. Includes responsive stuffs and SEO--->
-    <meta name="google-site-verification" content="aje3mNkQNU0sxxQUHkuLP7QfDyXvP9KBDGj1BDiA3GA" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>     
+      <!---Meta tags. Includes responsive stuffs and SEO--->
+      <meta name="google-site-verification" content="aje3mNkQNU0sxxQUHkuLP7QfDyXvP9KBDGj1BDiA3GA" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="title" content="How many COVID-19 cases in Malaysia today?" />
 	<meta name="description" content="Straightforward page that shows only the COVID-19 cases." />
 	<meta name="keywords" content="covid-19 malaysia,covid-19 cases malaysia"  />
@@ -48,7 +49,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!--Add to home screen-->
-    <link rel="stylesheet" type="text/css" href="../pwa/addtohomescreen.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <script src="../pwa/addtohomescreen.js"></script>
     <script>
         addToHomescreen();
