--- a/deaths/index_temp.html
+++ b/deaths/index_temp.html
@@ -58,7 +58,7 @@
     <div class="center-center">
         <h1>No data</h1>
     </div>
-	  <h2><center><a href="https://weareblahs.github.io/covidcases/"> View cases</a></center></h2>
+	  <h2><center><a href="https://weareblahs.github.io/covidcases/" class="redbox"> View cases</a></center></h2>
       <h2><center>
           <a href="https://weareblahs.github.io/covidcases/img/deaths.jpg" download="COVID-19_Deaths_DOWNLOAD_DATE.jpg"> Save as image </a>
         </center></h2>
