--- a/dynamic/index.html
+++ b/dynamic/index.html
@@ -69,7 +69,7 @@
     <div class=center-center>
         <h1 id="newcases">N/A</h1>
     </div>
-	  <h2><center><a href=https://weareblahs.github.io/covidcases/dynamic/deaths> View deaths</a></center></h2>
+	  <h2><center><a href=https://weareblahs.github.io/covidcases/dynamic/deaths class="redbox"> View deaths</a></center></h2>
         <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on: </center> <center id="time">N/A</center><center>Made by weareblahs + samleong123 <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button><br> Realtime API version <button a onclick=document.location='https://weareblahs.github.io/covidcases/'>Static version</button></center></p>        
     </html>
 </body>
