--- a/dynamic/deaths/index.html
+++ b/dynamic/deaths/index.html
@@ -44,7 +44,7 @@
     <meta name="msapplication-TileImage" content="../../icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-        <link rel="stylesheet" type="text/css" href="../styles/style.css">
+        <link rel="stylesheet" type="text/css" href="../../styles/style.css">
     <body>
         <title>How many COVID-19 deaths in Malaysia today?</title>
      
