--- a/navi/index.html
+++ b/navi/index.html
@@ -18,13 +18,28 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="styles/style.css">
+<link rel="stylesheet" href="../styles/style.css">
 <title>covidcases Menu</title>
     </body>
 </head>
 
 <body>
     <html>
-        
+        <a href="../index.html" class="navi"> Nationwide <br></a>
+        <a href="../states/kedah.html" class="navi"> Kedah <br></a>
+        <a href="../states/kelantan.html" class="navi"> Kelantan <br></a>
+        <a href="../states/melaka.html" class="navi"> Melaka <br></a>
+        <a href="../states/sembilan.html" class="navi"> Negeri Sembilan <br></a>
+        <a href="../states/pahang.html" class="navi"> Pahang <br></a>
+        <a href="../states/perak.html" class="navi"> Perak <br></a>
+        <a href="../states/perlis.html" class="navi"> Perlis <br></a>
+        <a href="../states/penang.html" class="navi"> Pulau Pinang <br></a>
+        <a href="../states/sabah.html" class="navi"> Sabah <br></a>
+        <a href="../states/sarawak.html" class="navi"> Sarawak <br></a>
+        <a href="../states/selangor.html" class="navi"> Selangor <br></a>
+        <a href="../states/terengganu.html" class="navi"> Terengganu <br></a>
+        <a href="../states/kl.html" class="navi"> Kuala Lumpur <br></a>
+        <a href="../states/labuan.html" class="navi"> Labuan <br></a>
+        <a href="../states/putrajaya.html" class="navi"> Putrajaya <br></a>
     </html>
 </body>
