--- a/navi/index.html
+++ b/navi/index.html
@@ -25,6 +25,7 @@
 
 <body>
     <html>
+        <center>
         <a href="../index.html" class="navi"> Nationwide <br></a>
         <a href="../states/kedah.html" class="navi"> Kedah <br></a>
         <a href="../states/kelantan.html" class="navi"> Kelantan <br></a>
@@ -41,5 +42,9 @@
         <a href="../states/kl.html" class="navi"> Kuala Lumpur <br></a>
         <a href="../states/labuan.html" class="navi"> Labuan <br></a>
         <a href="../states/putrajaya.html" class="navi"> Putrajaya <br></a>
+        <h2>Realtime update version</h2>
+        <a href="../dynamic/index.html" class="navi"> Nationwide <br></a>
+        </center>
+        <h2 class="credits">Original data available on MoH-Malaysia/covid19-public on GitHub <br> Source code of nationwide available on samleong123/COVID-19-Malaysia-API on GitHub<br>Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button></h2>
     </html>
 </body>
