--- a/state/pahang-d.html
+++ b/state/pahang-d.html
@@ -19,22 +19,22 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../styles/style.css"
 <body>
-        <title>How many COVID-19 cases in Kedah today?</title>
+        <title>How many COVID-19 deaths in Pahang today?</title>
     </body>
 </head>
     
 <body>
     <html>
     <div class="centertextv2">
-	  <h2><center>COVID-19 cases in Kedah as of 21 February 2022</center></h2>
+	  <h2><center>COVID-19 deaths in Pahang as of 21 February 2022</center></h2>
 	</div>
     <div class="center-center">
-        <h1>2486</h1>
+        <h1>1</h1>
     </div>
-	  <h2><center><a href="https://weareblahs.github.io/covidcases/states/kedah-d.html" class="redbox"> View deaths </a></center></h2>
+	  <h2><center><a href="https://weareblahs.github.io/covidcases/states/pahang.html" class="redbox"> View cases </a></center></h2>
       <h2><center>
-        <a href="https://weareblahs.github.io/covidcases/img/states/cases_Kedah.jpg" download="COVID-19_cases_in_Kedah_22_February_2022_10_24_17.jpg" class="redbox"> Save as image </a>
+        <a href="https://weareblahs.github.io/covidcases/img/states/deaths_Pahang.jpg" download="COVID-19_deaths_in_Pahang_22_February_2022_10_24_17.jpg" class="redbox"> Save as image </a>
       </center></h2>
-        <p><center>Updated on 22 February 2022 on 10:24:17 (MYT).</center></p>
+        <p><center>Updated on 22 February 2022 on 10:25:33 (MYT).</center></p>
  </html>
 </body>
