--- a/navi/index.html
+++ b/navi/index.html
@@ -27,21 +27,21 @@
     <html>
         <center>
         <a href="../index.html" class="navi"> Nationwide <br></a>
-        <a href="../states/kedah.html" class="navi"> Kedah <br></a>
-        <a href="../states/kelantan.html" class="navi"> Kelantan <br></a>
-        <a href="../states/melaka.html" class="navi"> Melaka <br></a>
-        <a href="../states/sembilan.html" class="navi"> Negeri Sembilan <br></a>
-        <a href="../states/pahang.html" class="navi"> Pahang <br></a>
-        <a href="../states/perak.html" class="navi"> Perak <br></a>
-        <a href="../states/perlis.html" class="navi"> Perlis <br></a>
-        <a href="../states/penang.html" class="navi"> Pulau Pinang <br></a>
-        <a href="../states/sabah.html" class="navi"> Sabah <br></a>
-        <a href="../states/sarawak.html" class="navi"> Sarawak <br></a>
-        <a href="../states/selangor.html" class="navi"> Selangor <br></a>
-        <a href="../states/terengganu.html" class="navi"> Terengganu <br></a>
-        <a href="../states/kl.html" class="navi"> Kuala Lumpur <br></a>
-        <a href="../states/labuan.html" class="navi"> Labuan <br></a>
-        <a href="../states/putrajaya.html" class="navi"> Putrajaya <br></a>
+        <a href="../state/kedah.html" class="navi"> Kedah <br></a>
+        <a href="../state/kelantan.html" class="navi"> Kelantan <br></a>
+        <a href="../state/melaka.html" class="navi"> Melaka <br></a>
+        <a href="../state/sembilan.html" class="navi"> Negeri Sembilan <br></a>
+        <a href="../state/pahang.html" class="navi"> Pahang <br></a>
+        <a href="../state/perak.html" class="navi"> Perak <br></a>
+        <a href="../state/perlis.html" class="navi"> Perlis <br></a>
+        <a href="../state/penang.html" class="navi"> Pulau Pinang <br></a>
+        <a href="../state/sabah.html" class="navi"> Sabah <br></a>
+        <a href="../state/sarawak.html" class="navi"> Sarawak <br></a>
+        <a href="../state/selangor.html" class="navi"> Selangor <br></a>
+        <a href="../state/terengganu.html" class="navi"> Terengganu <br></a>
+        <a href="../state/kl.html" class="navi"> Kuala Lumpur <br></a>
+        <a href="../state/labuan.html" class="navi"> Labuan <br></a>
+        <a href="../state/putrajaya.html" class="navi"> Putrajaya <br></a>
         <h2>Realtime update version</h2>
         <a href="../dynamic/index.html" class="navi"> Nationwide <br></a>
         </center>
