--- a/state/kl-d.html
+++ b/state/kl-d.html
@@ -31,10 +31,10 @@
     <div class="center-center">
         <h1>1</h1>
     </div>
-	  <h2><center><a href="https://weareblahs.github.io/covidcases/states/kl.html" class="redbox"> View cases </a></center></h2>
+	  <h2><center><a href="https://weareblahs.github.io/covidcases/state/kl.html" class="redbox"> View cases </a></center></h2>
       <h2><center>
-        <a href="https://weareblahs.github.io/covidcases/img/states/deaths_Kuala Lumpur.jpg" download="COVID-19_deaths_in_Kuala Lumpur_22_February_2022_10_58_22.jpg" class="redbox"> Save as image </a>
+        <a href="https://weareblahs.github.io/covidcases/img/deaths_Kuala Lumpur.jpg" download="COVID-19_deaths_in_Kuala Lumpur_22_February_2022_11_02_35.jpg" class="redbox"> Save as image </a>
       </center></h2>
-        <p><center>Updated on 22 February 2022 on 10:58:50 (MYT).</center></p>
+        <p><center>Updated on 22 February 2022 on 11:03:10 (MYT).</center></p>
  </html>
 </body>
