--- a/index_temp.html
+++ b/index_temp.html
@@ -69,10 +69,11 @@
     <div class="center-center">
         <h1>No data</h1>
     </div>
-	  <h2><center><a href="https://weareblahs.github.io/covidcases/deaths" class="redbox"> View deaths </a></center></h2>
+      <h2><center><a href="https://weareblahs.github.io/covidcases/deaths" class="redbox"> View deaths </a></center></h2>
+	  <h2><center><a href="https://weareblahs.github.io/covidcases/navi" class="redbox"> More statistics </a></center></h2>
       <h2><center>
         <a href="https://weareblahs.github.io/covidcases/img/cases.jpg" download="COVID-19_Deaths_DOWNLOAD_DATE.jpg" class="redbox"> Save as image </a>
       </center></h2>
-        <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on INSERT_GENERATE_DATE_HERE. Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button> Static version. Updates every hour. <button a onclick=document.location='https://weareblahs.github.io/covidcases/dynamic'>Realtime version</button></center></p>           
+        <p><center>Updated on INSERT_GENERATE_DATE_HERE. <br>Static version. Updates every hour. <button a onclick=document.location='https://weareblahs.github.io/covidcases/dynamic'>Realtime version</button></center></p>           
  </html>
 </body>
