--- a/navi/index.html
+++ b/navi/index.html
@@ -46,5 +46,6 @@
         <a href="../dynamic/index.html" class="navi"> Nationwide <br></a>
         </center>
         <h2 class="credits">Original data available on MoH-Malaysia/covid19-public on GitHub <br> Source code of nationwide available on samleong123/COVID-19-Malaysia-API on GitHub<br>Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button></h2>
+        <h2 class="credits">Problem with data in this website? <button a onclick=document.location='https://github.com/weareblahs/covidcases'>Report here</button></h2>
     </html>
 </body>
