--- a/navi/index.html
+++ b/navi/index.html
@@ -44,6 +44,7 @@
         <a href="../state/putrajaya.html" class="navi"> Putrajaya <br></a>
         <h2>Realtime update version</h2>
         <a href="../dynamic/index.html" class="navi"> Nationwide <br></a>
+        <a href="../dynamic/state.html" class="navi"> State-level <br></a>
         </center>
         <h2 class="credits">Original data available on MoH-Malaysia/covid19-public on GitHub <br> Source code of nationwide API available on samleong123/COVID-19-Malaysia-API on GitHub<br>Made by weareblahs (Realtime version made by samleong123) <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button></h2>
         <h2 class="credits">Problem with data in this website? <button a onclick=document.location='https://github.com/weareblahs/covidcases/issues'>Report here</button></h2>
