--- a/index_temp.html
+++ b/index_temp.html
@@ -69,6 +69,7 @@
     <div class="center-center">
         <h1>No data</h1>
     </div>
+      <h2><center>Latest updates now on Twitter, updated 10am every day. <a class="hyper" href="https://twitter.com/MYCOVIDCasesBot"><u>Follow @MYCOVIDCasesBot</u></center></a></h2>
       <h2><center><a href="https://weareblahs.github.io/covidcases/deaths" class="redbox"> View deaths </a></center></h2>
 	  <h2><center><a href="https://weareblahs.github.io/covidcases/navi" class="redbox"> More statistics </a></center></h2>
       <h2><center>
