--- a/navi/index.html
+++ b/navi/index.html
@@ -27,6 +27,7 @@
     <html>
         <center>
         <a href="../index.html" class="navi"> Nationwide <br></a>
+        <a href="../state/johor.html" class="navi"> Johor <br></a>
         <a href="../state/kedah.html" class="navi"> Kedah <br></a>
         <a href="../state/kelantan.html" class="navi"> Kelantan <br></a>
         <a href="../state/melaka.html" class="navi"> Melaka <br></a>
