Fix hyperlinks / dynamic BID

--- a/dynamic/deaths/state.html
+++ b/dynamic/deaths/state.html
@@ -58,19 +58,6 @@ h4 {
   }
 }
 
-a:link, a:visited {
-  background-color: red;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: red;
-}
-
 @media (prefers-color-scheme: dark) {
   body {
       background-color: black;
@@ -124,8 +111,9 @@ a:hover, a:active {
     <div class=center-center>
         <h1 id="newcases">N/A</h1>
     </div>
-    <div class=center-center><h2>Brought In Dead (BID):    <br><h1 id="bid"></h1></h2></div>
-        <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on : </center> <center id="time">N/A</center> </center><center>Made by weareblahs <button a onclick=document.location='https://github.com/weareblahs/myc19tldr'>Source code</button><br> Reatime API version <button a onclick=document.location='https://weareblahs.github.io/covidcases/'>Static version</button></center></p>        
+    <div class=center-center><h2>Brought In Dead (BID):</h2></div>
+    <div class=centertextv2><h1 id="bid"></h1></div>
+        <p><center>Original data available on MoH-Malaysia/covid19-public on GitHub / Source code of API available on samleong123/COVID-19-Malaysia-API on GitHub</center><center>Updated on : </center> <center id="time">N/A</center> </center><center>Made by weareblahs <button> <a href="https://github.com/weareblahs/myc19tldr">Source code</a></button><br> Reatime API version <button> <a href="https://weareblahs.github.io/covidcases/">Static version</a></button></center></p>        
     </html>
 </body>
 
