--- a/dynamic/index.html
+++ b/dynamic/index.html
@@ -71,7 +71,8 @@
     </div>
 	  <h2><center><a href=https://weareblahs.github.io/covidcases/dynamic/deaths class="redbox"> View deaths</a></center></h2>
       <h2><center><a href="https://weareblahs.github.io/covidcases/navi" class="redbox"> More statistics </a></center></h2>
-        <p><center>Updated on: </center> <center id="time">N/A</center><center><br> Realtime version. Updates when you refresh. <button a onclick=document.location='https://weareblahs.github.io/covidcases/'>Static version</button></center></p>        
+
+        <p><center>Updated on: </center> <center id="time">N/A</center><center><br> Realtime version. Updates when you refresh. <button> <a href="https://github.com/weareblahs/myc19tldr"> Static version</a></button></center></p>        
     </html>
 </body>
 
